Laboratorium 3: praca domowa: Dodanie napisu wyświetlającego się po dodaniu nowego zadania

--- a/laboratorium 3/praca domowa/PawełGryglewiczLab3PracDom/PawełGryglewiczLab3PracDom/styles/creator-page-styles.css
+++ b/laboratorium 3/praca domowa/PawełGryglewiczLab3PracDom/PawełGryglewiczLab3PracDom/styles/creator-page-styles.css
@@ -76,3 +76,16 @@ header {
     margin-bottom: 5px;
 }
 
+/* Styl kontenera z napisem potwierdzającym*/
+#confirm-label-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+/* Styl napisu potwierdzającego*/
+#confirm-label{
+    color: brown;
+    text-align:center;
+}
+
