Laboratorium 3: praca domowa: Dodanie migania do zadań o wysokim priorytecie w widoku szczegółowym

--- a/laboratorium 3/praca domowa/PawełGryglewiczLab3PracDom/PawełGryglewiczLab3PracDom/styles/detailed-view-styles.css
+++ b/laboratorium 3/praca domowa/PawełGryglewiczLab3PracDom/PawełGryglewiczLab3PracDom/styles/detailed-view-styles.css
@@ -64,6 +64,18 @@ table {
     background-color:forestgreen;
 }
 
+/* Styl podczas błyskania zadania*/
+.flash {
+    background-color: white;
+    
+}
+
+    .flash td {
+        color: black;
+    }
+
+
+
 /* Styl przycisków*/
 .button {
     display: inline-block;
