--- a/laboratorium 4/praca domowa/PawełGryglewiczLab4PracDom/PawełGryglewiczLab4PracDom/Views/Home/Index.cshtml
+++ b/laboratorium 4/praca domowa/PawełGryglewiczLab4PracDom/PawełGryglewiczLab4PracDom/Views/Home/Index.cshtml
@@ -1,30 +1,44 @@
-﻿@model PawełGryglewiczLab4PracDom.Models.UserData
+﻿
 @{
     ViewData["Title"] = "Ekran Logowania";
+
 }
-
+@model PawełGryglewiczLab4PracDom.Models.UserData
 <!--Formularz logowania-->
-<form class="form-horizontal">
-    <h2>Logowanie</h2>
-    <!-- Pole na adres email-->
-    <div class="form-group">
-        @Html.LabelFor(m => Model.Email, htmlAttributes: new { @class = "col-sm-2 control-label"})
-        <div class="col-sm-10">
-            @Html.EditorFor(m => Model.Email, new {htmlAttributes= new {@class="form-control", @placeholder="Email"}} )
+@using (Html.BeginForm("Index", "Home", FormMethod.Post))
+{
+    <div class="form-horizontal">
+        <h2>Logowanie</h2>
+        <!-- Pole na adres email-->
+        <div class="form-group">
+            @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "col-sm-2 control-label" })
+            <div class="col-sm-10">
+                @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control", @placeholder = "Email" } })
+            </div>
         </div>
-    </div>
-    <!-- Pole na hasło-->
-    <div class="form-group">
-        @Html.LabelFor(m =>Model.Password, "Hasło",htmlAttributes: new { @class = "col-sm-2 control-label" })
-        <div class="col-sm-10">
-            @Html.EditorFor(m => Model.Email, new { htmlAttributes = new { @class = "form-control", @placeholder = "Hasło" } })
-        </div>
-    </div>
+        <!-- Pole na hasło-->
+        <div class="form-group">
+            @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "col-sm-2 control-label" })
+            <div class="col-sm-10">
+                @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control", @placeholder = "Hasło" } })
 
-    <!--Przycisk logowania-->
-    <div class="form-group">
-        <div class="col-sm-offset-2 col-sm-10">
-            <button type="submit" class="btn-dark">Zaloguj</button>
+            </div>
         </div>
+
+        <!--Przycisk logowania-->
+        <div class="form-group">
+            <div class="col-sm-offset-2 col-sm-10">
+                <input type="submit" value="Zaloguj" class="btn btn-dark" />
+            </div>
+        </div>
+        @{ 
+           <!--Wyświetlenie komunikatu błędnych danych-->
+            if(ViewBag.IsCorrect == false)
+                {
+                    <div class="alert alert-danger">
+                        <strong>Błąd</strong> Błędne dane logowania
+                    </div>
+                }
+        }
     </div>
-</form>
+}
