--- a/laboratorium 4/praca domowa/PawełGryglewiczLab4PracDom/PawełGryglewiczLab4PracDom/Views/Home/MainPage.cshtml
+++ b/laboratorium 4/praca domowa/PawełGryglewiczLab4PracDom/PawełGryglewiczLab4PracDom/Views/Home/MainPage.cshtml
@@ -1,9 +1,12 @@
 ﻿@model PawełGryglewiczLab4PracDom.Models.UserData
+@{ 
+    ViewData["Title"] = "Strona główna";
+}
     <!--Pasek nawigacyjny-->
     <navbar class="navbar navbar-expand-sm bg-dark navbar-dark">
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link" href="#">Wyciągi</a>
+                <a class="nav-link" href=@Url.Action("TransfersView","Home")>Wyciągi</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">Przelew</a>
@@ -65,6 +68,7 @@
             </div>
             <div class="col-sm-9 bg-light text-dark">
                 @{
+                    //Wybór koloru czcionki w zależności od kwoty
                     double balance = ((UserData)TempData["CurrentUser"]).Balance;
                     if (balance > 0)
                     {
