Laboratorium 4: praca domowa: Dodanie formularzu do wysyłania przelewu

--- a/laboratorium 4/praca domowa/PawełGryglewiczLab4PracDom/PawełGryglewiczLab4PracDom/Views/Home/MainPage.cshtml
+++ b/laboratorium 4/praca domowa/PawełGryglewiczLab4PracDom/PawełGryglewiczLab4PracDom/Views/Home/MainPage.cshtml
@@ -9,7 +9,7 @@
                 <a class="nav-link" href=@Url.Action("TransfersView","Home")>Wyciągi</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Przelew</a>
+                <a class="nav-link" href=@Url.Action("TransferForm","Home")>Przelew</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">Pomoc techniczna</a>
