--- a/laboratorium 4/praca domowa/PawełGryglewiczLab4PracDom/PawełGryglewiczLab4PracDom/Views/Home/Index.cshtml
+++ b/laboratorium 4/praca domowa/PawełGryglewiczLab4PracDom/PawełGryglewiczLab4PracDom/Views/Home/Index.cshtml
@@ -18,7 +18,7 @@
         </div>
         <!-- Pole na hasło-->
         <div class="form-group">
-            @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "col-sm-2 control-label" })
+            @Html.LabelFor(model => model.Password, "Hasło",htmlAttributes: new { @class = "col-sm-2 control-label" })
             <div class="col-sm-10">
                 @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control", @placeholder = "Hasło" } })
 
