--- a/laboratorium 4/praca domowa/PawełGryglewiczLab4PracDom/PawełGryglewiczLab4PracDom/Views/Home/TransfersView.cshtml
+++ b/laboratorium 4/praca domowa/PawełGryglewiczLab4PracDom/PawełGryglewiczLab4PracDom/Views/Home/TransfersView.cshtml
@@ -1,67 +1,70 @@
 ﻿
 @model PawełGryglewiczLab4PracDom.Models.Transfer
+@{
+    ViewData["Title"] = "Historia transakcji";
+}
+
 <!--Pasek nawigacyjny-->
 <navbar class="navbar navbar-expand-sm bg-dark navbar-dark">
     <ul class="navbar-nav">
         <li class="nav-item">
             <a class="nav-link" href=@Url.Action("MainPage", "Home")>Strona główna</a>
-            </li>
+        </li>
         <li class="nav-item">
-            <a class="nav-link" href="#">Przelew</a>
+            <a class="nav-link" href=@Url.Action("TransferForm", "Home")>Przelew</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="#">Pomoc techniczna</a>
         </li>
     </ul>
 </navbar>
+<!--Tabela z przelewami-->
+<table class="table">
+    <!--Nagłówek tabeli-->
+    <thead class="thead-dark">
+    <th scope="col">#</th>
+    <th scope="col">Tytuł przelewu</th>
+    <th scope="col">Kwota</th>
+    <th scope="col">Data</th>
+    <th scope="col">Nadawca</th>
+    <th scope="col">Odbiorca</th>
+    </thead>
+    <!-- Zawartość tabeli-->
+    <tbody>
+        @{
+            int i = 0;
+            //Przejście przez wszystkie przelewy
+            foreach (var transfer in (List<Transfer>)TempData["Transfers"])
+            {
+                i++;
+                //Dodanie wpisu o przelewie do tabeli
+                <tr>
+                    <th scope="row">@(i)</th>
+                    <td>@(transfer.Title)</td>
+                    <td>
+                        @{
+                            double sum = transfer.Sum;
+                            //Dobranie koloru czcionki w zalezności od kwoty
+                            if (sum > 0)
+                            {
+                                <p class="text-success">@(sum)</p>
+                            }
+                            else if (sum < 0)
+                            {
+                                <p class="text-danger">@(sum)</p>
+                            }
+                            else
+                            {
+                                <p>@(sum)</p>
+                            }
+                        }
 
-    <!--Tabela z przelewami-->
-    <table class="table">
-        <!--Nagłówek tabeli-->
-        <thead class="thead-dark">
-            <th scope="col">#</th>
-            <th scope="col">Tytuł przelewu</th>
-            <th scope="col">Kwota</th>
-            <th scope="col">Data</th>
-            <th scope="col">Nadawca</th>
-            <th scope="col">Odbiorca</th>
-        </thead>
-            <!-- Zawartość tabeli-->
-            <tbody>
-                @{
-                    int i = 0;
-                    //Przejście przez wszystkie przelewy
-                    foreach (var transfer in (List<Transfer>)TempData["Transfers"])
-                    {
-                        i++;
-                        //Dodanie wpisu o przelewie do tabeli
-                        <tr>
-                            <th scope="row">@(i)</th>
-                            <td>@(transfer.Title)</td>
-                            <td>
-                                @{
-                                    double sum = transfer.Sum;
-                                    //Dobranie koloru czcionki w zalezności od kwoty
-                                    if (sum > 0)
-                                    {
-                                        <p class="text-success">@(sum)</p>
-                                    }
-                                    else if (sum < 0)
-                                    {
-                                        <p class="text-danger">@(sum)</p>
-                                    }
-                                    else
-                                    {
-                                        <p>@(sum)</p>
-                                    }
-                                 }
-
-                            </td>
-                            <td>@(transfer.Date)</td>
-                            <td>@(transfer.Sender)</td>
-                            <td>@(transfer.Recipient)</td>
-                        </tr>
-                    }
-                }
-            </tbody>
-    </table>
+                    </td>
+                    <td>@(transfer.Date)</td>
+                    <td>@(transfer.Sender)</td>
+                    <td>@(transfer.Recipient)</td>
+                </tr>
+            }
+        }
+    </tbody>
+</table>
