Laboratorium 4: praca domowa: Dodanie wyglądu i endpointów strony edytującej dane użytkownika

--- a/laboratorium 4/praca domowa/PawełGryglewiczLab4PracDom/PawełGryglewiczLab4PracDom/Views/Home/TransfersView.cshtml
+++ b/laboratorium 4/praca domowa/PawełGryglewiczLab4PracDom/PawełGryglewiczLab4PracDom/Views/Home/TransfersView.cshtml
@@ -14,7 +14,7 @@
             <a class="nav-link" href=@Url.Action("TransferForm", "Home")>Przelew</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#">Pomoc techniczna</a>
+            <a class="nav-link" href=@Url.Action("EditUserData","Home")>Edytuj dane</a>
         </li>
     </ul>
 </navbar>
