--- a/laboratorium 4/praca domowa/PawełGryglewiczLab4PracDom/PawełGryglewiczLab4PracDom/Views/Home/TransferForm.cshtml
+++ b/laboratorium 4/praca domowa/PawełGryglewiczLab4PracDom/PawełGryglewiczLab4PracDom/Views/Home/TransferForm.cshtml
@@ -13,7 +13,7 @@
             <a class="nav-link" href=@Url.Action("TransfersView","Home")>Wyciągi</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#">Pomoc techniczna</a>
+            <a class="nav-link" href=@Url.Action("EditUserData","Home")>Edytuj dane</a>
         </li>
     </ul>
 </navbar>
