--- a/laboratorium 5/praca domowa/PawełGryglewiczLab5PracDom/PawełGryglewiczLab5PracDom/Views/Home/Index.cshtml
+++ b/laboratorium 5/praca domowa/PawełGryglewiczLab5PracDom/PawełGryglewiczLab5PracDom/Views/Home/Index.cshtml
@@ -23,7 +23,7 @@
                     <a class="nav-link" href="#">Lista połączeń</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Stacje</a>
+                    <a class="nav-link" href=@Url.Action("ListOfStations","Station")>Stacje</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href=@Url.Action("ListOfTrains","Train")>Pociągi</a>
@@ -48,8 +48,8 @@
             <li class="list-group-item list-group-item-action ">Zarezerwuj bilet</li>
             <li class="list-group-item list-group-item-action">Wyświetl listę wszystkich pasażerów </li>
             <li class="list-group-item list-group-item-action">Wyświetl listę wszystkich dostępnych połączeń</li>
-            <li class="list-group-item list-group-item-action">Wyświetl listę stacji kolejowych </li>
-            <a href=@Url.Action("ListOfTrains","Train")><li class="list-group-item list-group-item-action" >Wyświetl wszystkie używane pociągi</li></a>
+            <a href=@Url.Action("ListOfStations","Station")><li class="list-group-item list-group-item-action">Wyświetl listę stacji kolejowych </li></a>
+            <a href=@Url.Action("ListOfTrains","Train")><li class="list-group-item list-group-item-action">Wyświetl wszystkie używane pociągi</li></a>
         </ul>
     </div>
 </body>
