--- a/laboratorium 5/praca domowa/PawełGryglewiczLab5PracDom/PawełGryglewiczLab5PracDom/Views/Train/ListOfTrains.cshtml
+++ b/laboratorium 5/praca domowa/PawełGryglewiczLab5PracDom/PawełGryglewiczLab5PracDom/Views/Train/ListOfTrains.cshtml
@@ -20,7 +20,7 @@
                         <a class="nav-link" href="#">Lista wszystkich pasażerów</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Lista połączeń</a>
+                        <a class="nav-link" href=@Url.Action("ListOfConnections","RailwayConnection")>Lista połączeń</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href=@Url.Action("ListOfStations","Station")>Stacje</a>
