Laboratorium 5: praca domowa: dodanie widoku ListOfPassengers i obsługującego go kontrolera

--- a/laboratorium 5/praca domowa/PawełGryglewiczLab5PracDom/PawełGryglewiczLab5PracDom/Views/Shared/_Layout.cshtml
+++ b/laboratorium 5/praca domowa/PawełGryglewiczLab5PracDom/PawełGryglewiczLab5PracDom/Views/Shared/_Layout.cshtml
@@ -25,7 +25,7 @@
                             <a class="nav-link" href="#">Rezerwacja biletu</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Lista wszystkich pasażerów</a>
+                            <a class="nav-link" href=@Url.Action("ListOfPassengers","Passenger")>Lista wszystkich pasażerów</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href=@Url.Action("ListOfConnections","RailwayConnection")>Lista połączeń</a>
