--- a/laboratorium 5/praca domowa/PawełGryglewiczLab5PracDom/PawełGryglewiczLab5PracDom/Views/Home/Index.cshtml
+++ b/laboratorium 5/praca domowa/PawełGryglewiczLab5PracDom/PawełGryglewiczLab5PracDom/Views/Home/Index.cshtml
@@ -16,7 +16,7 @@
     <div class="mt-5">
         <ul class="list-group">
             <li class="list-group-item list-group-item-action ">Zarezerwuj bilet</li>
-            <li class="list-group-item list-group-item-action">Wyświetl listę wszystkich pasażerów </li>
+            <a href=@Url.Action("ListOfPassengers","Passenger")><li class="list-group-item list-group-item-action">Wyświetl listę wszystkich pasażerów </li></a>
             <a href=@Url.Action("ListOfConnections","RailwayConnection")><li class="list-group-item list-group-item-action">Wyświetl listę wszystkich dostępnych połączeń</li></a>
             <a href=@Url.Action("ListOfStations","Station")><li class="list-group-item list-group-item-action">Wyświetl listę stacji kolejowych </li></a>
             <a href=@Url.Action("ListOfTrains","Train")><li class="list-group-item list-group-item-action">Wyświetl wszystkie używane pociągi</li></a>
